--- a/Winter 2025.Rmd
+++ b/Winter 2025.Rmd
@@ -29,7 +29,7 @@ hours <- read.csv("hours.csv")
 ## Executive Summary
 
 <div style="display:flex;">
-  <div class="callout">Overall budget<br />
+  <div class="callout">`r quarter` budget<br />
     <span class="callout-text">$`r count_x("totalreceived")`</span>
   </div>
   <div class="callout">Number of organizations<br />
