--- a/template.Rmd
+++ b/template.Rmd
@@ -26,7 +26,7 @@ df <- setup(quarter)
 ## Executive Summary
 
 <div style="display:flex;">
-  <div class="callout">Overall budget<br />
+  <div class="callout">`r quarter` budget<br />
     <span class="callout-text">$`r count_x("totalreceived")`</span>
   </div>
   <div class="callout">Number of organizations<br />
