--- a/Winter 2025.Rmd
+++ b/Winter 2025.Rmd
@@ -172,9 +172,11 @@ Andrea Kimpson, Second-Year Finance Committee Member
 
 Shivani Patel, Second-Year Finance Committee Member
 
+Thomas Yixu Liu, Second-Year Finance Committee Member
+
 Faris Alrakhis, First-Year Finance Committee Member
 
-Moe Alsharif, First-Year Finance Committee Member
+Mohammed Alsharif, First-Year Finance Committee Member
 
 Tiffany Tu, First-Year Finance Committee Member
 
